# Development-of-Multi-Agent-Coordination-and-Control-for-Surface-and-Underwater-Vehicles

./: Boat_Model_2.slx  README.md  new_combined_approach.m  path_with_pid.m  pid_with_apf.m  point_to_point_control.m  point_to_point_control_one.m  pointtopoint.m  trajectory_with_pid.m  trial_to_draw_boat_in_animation.m  with_pd_first.m  with_pid_first.m
Manual/: 30_5.csv  first.csv
PID/: 29_1.csv  30_1.csv  30_2.csv  30_3.csv  30_4.csv  30_5.csv  trajectory_data.csv
PID/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Plots/: 3d obsctacle.pgf  3dplotting.py  3dplotting_new.py  DMM_2D_obstacle.pgf  DMM_2obstacle.csv  DMM_obstacle.csv  DMM_obstacle_3D.pgf  ROAM_case2a.csv  ROAM_case3.csv  Without_obstacle.pgf  default_trajectory.csv  error_calculate.py  first_with_3d.pgf  first_with_top.pgf  first_without.pgf  first_without_1.pgf  manual_trajectory_save.py  plotting_only_one_trajectory.py  simple.csv  simple_2.csv  trajectory.csv  trajectory2.csv  trajectory_publisher.py  trajectory_save.py  trajfromcsv.py
Plots/Backstepping/: 30_5.csv
Plots/Cascaded FeedBack Linearization/: 29_1.csv  30_1.csv  30_2.csv  30_4.csv  30_5.csv  case1.csv  case2.csv  case3.csv  case5.csv  case6.csv  case7.csv  case8.csv  eight_1.csv  eight_2.csv  eight_3.csv  eight_4.csv  trajectory_data.csv
Plots/DMM/Case2/: 2D_strike.pgf  3D_strike.pgf  case2.csv
Plots/DMM/Case3/: 2D_multi.pgf  3D_multi.pgf  case3.csv
Plots/DMM/Case_1/: DMM_obstacle.csv  simple.csv
Plots/latest/backstepping/: second.csv
ROAM/Case1_Multi/: 2D With Multiple.pgf  3D With Multiple.pgf  ROAM_case1.csv
ROAM/Case2_single/: 2D_roam_single.pgf  3d_roam_single.pgf  ROAM_case2.csv
ROAM/case2_single_sucess/: 2d.pgf  3d.pgf  case2_suc.csv
ROAM/case4/: case4.csv
dynamics_matrix/launch/: graded_launch.py  submarine.launch.py
dynamics_matrix/launch/Microsoft/DeveloperTools/: deviceid
dynamics_matrix/models/coast_waves/: model.sdf
dynamics_matrix/models/my_lrauv/: model.sdf
dynamics_matrix/models/my_lrauv_modified/: model.sdf
dynamics_matrix/models/my_lrauv_negative/: model.config  model.sdf
dynamics_matrix/models/wam-v/: model.config  model.sdf
dynamics_matrix/worlds/: control.sdf  graded_full.sdf  new_wol.world
message_type/: CMakeLists.txt  package.xml
message_type/msg/: Allocatedtask.msg  CombinedTaskallocation.msg  List.msg  TaskScore.msg  Taskallocation.msg  Triple.msg
surface/: CMakeLists.txt  package.xml
surface/include/surface/: backstepping_control.hpp  cascaded_control.hpp  controller.hpp  pid_controller.hpp  task_checker_node.hpp
surface/launch/: comb_new_launch.py  concave_obstacle_launch.py  multi_agent_launch.py  multi_agents_launch.py
surface/models/my_lrauv_neutral/: model.sdf
surface/models/pipe/meshes/: pipe.STL
surface/models/wamv/: wamv.sdf
surface/src/: agrregator_node.cpp  backsteping_implementation.cpp  cascaded_control.cpp  cascaded_implementation.cpp  concave.cpp  decision_making.cpp  modified_roam.cpp  multi_agent_1.cpp  multi_dmm.cpp  new_control.cpp  pid_implementation.cpp  pose_control.cpp  soph_roam.cpp  task_allocated_multi_agent.cpp  task_publisher.cpp  under_study_roam.cpp
surface/worlds/: concave_obstacle.sdf  control.sdf  multi_agent.sdf  new.sdf  two_seven.sdf
