<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>surface</name>
  <version>0.0.0</version>
  <description>Multi-Agent ASV and AUV</description>
  <maintainer email="arashdeepsingh1512@gmail.com">arash</maintainer>
  <license>Apache-2.0</license>


  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>sensor_msgs</depend>
  <depend>Eigen3</depend>
  <depend>message_type</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
 
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
 
  <depend>std_msgs</depend>



  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
